--- a/1/index.html
+++ b/1/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <header>
-            <img src="images/header-image.png" alt="Laundry Image">
+            <img src="images/header-image.png" alt="images/header-image.png">
         </header>
         <main>
             <h1>Ranpere Laundry Services</h1>
