--- a/5/index.html
+++ b/5/index.html
@@ -11,8 +11,8 @@
         <header>
             <h1>Checkout</h1>
             <div class="icons">
-                <img src="cart-icon.png" alt="Cart Icon">
-                <img src="user-icon.png" alt="User Icon">
+                <img src="cart-icon.png" alt="cart-icon.png">
+                <img src="user-icon.png" alt="user-icon.png">
             </div>
         </header>
         <main>
@@ -37,11 +37,11 @@
             </div>
             <div class="pickup-delivery-options">
                 <div class="option">
-                    <img src="pickup-icon.png" alt="Pickup">
+                    <img src="pickup-icon.png" alt="pickup-icon.png">
                     <p>Pickup</p>
                 </div>
                 <div class="option">
-                    <img src="delivery-icon.png" alt="Delivery">
+                    <img src="delivery-icon.png" alt="delivery-icon.png">
                     <p>Delivery</p>
                 </div>
             </div>
