--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
+	    width: 30%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -50,7 +51,9 @@
         /* Optional: Fade in effect */
         @keyframes fadeIn {
             0% { opacity: 0; }
-            100% { opacity: 1; }
+	    20% { opacity: 1; }
+	    80% { opacity: 1; }
+            100% { opacity: 0; }
         }
     </style>
 </head>
