--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             margin: 0;
             padding: 0;
             height: 100%;
-	    width: 30%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -39,6 +38,7 @@
 
         .splash-container {
             text-align: center;
+	    max-width: 600px;
         }
 
         .splash-container h1 {
@@ -65,7 +65,7 @@
         // Redirect after 3 seconds
         setTimeout(function() {
             window.location.href = '1/index.html'; // Replace with your next page's filename
-        }, 3000);
+        }, 6000);
     </script>
 </body>
 </html>
