--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #a6c5e9; /* Optional: Customize your background color */
+            background-color: #f0f0f0; /* Optional: Customize your background color */
             font-family: Arial, sans-serif;
         }
 
         .splash-container {
             text-align: center;
+	    background-color: #a6c5e9; 
 	    max-width: 600px;
         }
 
@@ -52,8 +53,8 @@
         @keyframes fadeIn {
             0% { opacity: 0; }
 	    20% { opacity: 1; }
-	    80% { opacity: 1; }
-            100% { opacity: 0; }
+	    80% { opacity: 0; }
+            100% { opacity: 1; }
         }
     </style>
 </head>
