--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         .splash-container {
             text-align: center;
 	    background-color: #a6c5e9; 
-	    max-width: 600px;
+	    max-width: 800px;
+	    max-width: 100%;
         }
 
         .splash-container h1 {
