--- a/index.html
+++ b/index.html
@@ -40,10 +40,16 @@
             text-align: center;
 	    background-color: #a6c5e9; 
 	    max-width: 800px;
-	    max-width: 100%;
+	    height: 100%;
+	    width: 400px;
+		border-radius: 20px;
+		
         }
 
         .splash-container h1 {
+			position: absolute;
+			top: 45%; 
+			margin-left: 45px;
             font-size: 3em;
             color: #004aad;
             font-weight: bold;
