--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <script>
         // Redirect after 3 seconds
         setTimeout(function() {
-            window.location.href = '1/index.html'; // Replace with your next page's filename
+            window.location.href = '1and1.5/1.html'; // Replace with your next page's filename
         }, 6);
     </script>
 </body>
