--- a/1and1.5/2.html
+++ b/1and1.5/2.html
@@ -17,7 +17,7 @@
 
     <form style="display: flex; flex-direction: column; gap: 15px; margin-top: 20px;">
 	
-      <input type="email" placeholder="Enter email" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
+      <input type="text" placeholder="Enter email" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
       <input type="password" placeholder="Enter password" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
 	  
      <button type="submit" class="login-button" style="padding: 10px; font-size: 16px; background-color: #0066cc; color: white; border: none; border-radius: 5px; cursor: pointer;">
