--- a/1and1.5/1.html
+++ b/1and1.5/1.html
@@ -12,9 +12,9 @@
     <h1 style="font-size: 24px; color: #333; margin-bottom: 20px;">Welcome to Ranpere laundry services</h1>
     <p style="font-size: 18px; color: #555;">Get started!</p>
 
-    <form style="display: flex; flex-direction: column; gap: 15px; margin-top: 20px;">
+    <form action="../2/index.html" method="GET" style="display: flex; flex-direction: column; gap: 15px; margin-top: 20px;">
       <input type="text" placeholder="Enter full name" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
-      <input type="text" placeholder="Enter email" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
+      <input type="email" placeholder="Enter email" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
       <input type="password" placeholder="Enter password" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
       <button type="submit" class="signup-button" style="padding: 10px; font-size: 16px; background-color: #0066cc; color: white; border: none; border-radius: 5px; cursor: pointer;">
         Sign Up
