--- a/1and1.5/1.html
+++ b/1and1.5/1.html
@@ -16,7 +16,10 @@
       <input type="text" placeholder="Enter full name" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
       <input type="email" placeholder="Enter email" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
       <input type="password" placeholder="Enter password" style="padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
-      <button type="submit" class="signup-button" style="padding: 10px; font-size: 16px; background-color: #0066cc; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      <!--<button type="submit" class="signup-button" style="padding: 10px; font-size: 16px; background-color: #0066cc; color: white; border: none; border-radius: 5px; cursor: pointer;">
+        Sign Up
+      </button>-->
+	<button type="submit" style="padding: 10px; font-size: 16px; background-color: #0066cc; color: white; border: none; border-radius: 5px; cursor: pointer;">
         Sign Up
       </button>
     </form>
